--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,8 +15,7 @@
             --dark-pink: #d42249;
         }
 
-        html,
-        body {
+        html, body {
             height: 100%;
             margin: 0;
         }
@@ -28,22 +27,22 @@
             display: flex;
             flex-direction: column;
         }
-
-        img {
+        
+        img{
             border-radius: 25px;
         }
-
+        
         .navbar {
             background: #d42249;
             background: linear-gradient(90deg, #e70a3a8f 20%, rgba(255, 255, 255, 0) 78%, rgba(209, 11, 54, 0.564) 100%);
         }
 
-        .navbar-brand {
-            color: #ffffff !important;
+        .navbar-brand{
+            color:  #ffffff !important;
             font-weight: bold;
         }
 
-        .nav-link {
+        .nav-link{
             color: var(--secondary-color) !important;
         }
 
@@ -57,14 +56,16 @@
             flex: 1;
         }
 
+        .form-control {
+            background-color: #fff4f78f;
+        }
+
         .form-container {
-            max-width: 600px;
-            /* Aumentando a largura da div */
-            margin: 50px auto;
-            /* Centralizando vertical e horizontalmente */
+            max-width: 600px; /* Aumentando a largura da div */
+            margin: 50px auto; /* Centralizando vertical e horizontalmente */
             padding: 20px;
             border-radius: 10px;
-            background-color: white;
+            background-color: #f0dadf8f;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -81,9 +82,9 @@
             background-color: var(--dark-pink);
         }
 
-        footer {
+        footer { 
             background: #d42249;
-            background: linear-gradient(90deg, #e70a3a8f 28%, rgba(255, 255, 255, 0) 48%, rgba(209, 11, 54, 0.564) 90%);
+            background: linear-gradient(90deg, #e70a3a8f 28%, rgba(255,255,255,0) 48%, rgba(209, 11, 54, 0.564) 90%);
             height: 60px;
             width: 100%;
             position: relative;
