--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -123,16 +123,20 @@
             <h1 class="text-center">Cadastro</h1>
             <form action="cadastro" method="POST">
                 <div class="form-group mb-3">
-                    <label for="nome">Nome</label>
+                    <label for="name">Nome</label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="Digite seu nome" required>
                 </div>
                 <div class="form-group mb-3">
-                    <label for="emailCadastro">Email</label>
+                    <label for="email">Email</label>
                     <input type="text" class="form-control" name="email" id="email" placeholder="Digite seu email" required>
                 </div>
                 <div class="form-group mb-3">
-                    <label for="senhaCadastro">Senha</label>
+                    <label for="password">Senha</label>
                     <input type="password" class="form-control" name="password" id="password" placeholder="Digite sua senha" required>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="phoneNumber">Senha</label>
+                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="Digite seu número de telefone" required>
                 </div>
                 <button type="submit" class="btn btn-main btn-block">Cadastrar</button>
                 <p>
