--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -131,12 +131,12 @@
                     <input type="text" class="form-control" name="email" id="email" placeholder="Digite seu email" required>
                 </div>
                 <div class="form-group mb-3">
-                    <label for="password">Senha</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Digite sua senha" required>
+                    <label for="phoneNumber">Número de telefone</label>
+                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="Digite seu número de telefone" required>
                 </div>
                 <div class="form-group mb-3">
-                    <label for="phoneNumber">Senha</label>
-                    <input type="text" class="form-control" name="phoneNumber" id="phoneNumber" placeholder="Digite seu número de telefone" required>
+                    <label for="password">Senha</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Digite sua senha" required>
                 </div>
                 <button type="submit" class="btn btn-main btn-block">Cadastrar</button>
                 <p>
