--- a/views/carrinho.ejs
+++ b/views/carrinho.ejs
@@ -130,7 +130,7 @@
                         </a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/carrinho">Carrinho</a></li>
+                    <li class="nav-item"><a class="nav-link" href="carrinho">Carrinho</a></li>
                     <li class="nav-item"><a class="nav-link" href="favoritos">Favoritos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/logout">Sair</a></li>
                 </ul>
