--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -129,16 +129,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Favoritos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Início</a>
+                        <a class="nav-link" href="/">Início</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="promocoes.html">Promoções</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="minhaconta.html">Minha conta</a>
+                        <a class="nav-link" href="/logout">Sair</a>
                     </li>
                     <li class="nav-item cart-icon">
-                        <a class="nav-link" href="carrinho.html">
+                        <a class="nav-link" href="carrinho">
                             <i class="fas fa-shopping-cart"></i>
                             <span class="badge bg-danger">0</span>
                         </a>
@@ -168,7 +165,7 @@
                 <% favoritos.forEach(favorito => { %>
                     <div class="col-md-4">
                         <div class="favorite-card shadow-sm">
-                            <img src="<%= favorito.image %>" alt="<%= favorito.nome %>" class="img-fluid rounded">
+                            <img src="<%= favorito.Product.imageUrl %>" alt="<%= favorito.nome %>" class="img-fluid rounded">
                             <h5 class="mt-3"><%= favorito.nome %></h5>
                             <p class="text-main">R$ <%= favorito.preco %></p>
                             <div class="d-flex justify-content-between align-items-center">
